# Chihun-Lee.github.io

./: .gitignore  CLAUDE.md  README.md  RESEARCH.md  SYNC.md  rebuild_all.sh
.github/workflows/: deploy-website.yml
CV/: .gitignore  Curriculum Vitae Chihun Lee (2025.11).docx  README.md  build_cv.py  template.typ
SNS/: README.md  generate_posts.py
SNS/posts/: pub-cho2022-superhydrophilic.md  pub-gal2023-rheology.md  pub-jung2025-latent-diffusion.md  pub-keawmuang2024-colored-cooler.md  pub-ko2024-radiative-cooler.md  pub-lee2020-injection-ann.md  pub-lee2020-scalable-metasurface.md  pub-lee2022-binary-phase.md  pub-lee2024-metasurface-color.md  pub-lee2025-benchmarking.md  pub-lee2025-hotrolled.md  pub-moon2022-metalens-tutorial.md  pub-noh2021-transmissive-antenna.md  pub-noh2023-inverse-review.md  pub-park-ann-additive-recommender.md  pub-park-brazed-sus304.md  pub-park2023-mrs-coolers.md  pub-phan2026-stable-diffusion-microstructure.md  pub-seong2025-crystalline-hybrid.md  pub-shin2019-cold-compaction.md  pub-shin2019-fe-c-correlation.md  pub-shin2021-lpbf-ti.md  pub-so2023-multicolor-3d-hologram.md  talk-2023-materials-research-society.md  talk-international-injection-moulding-conference.md  talk-korean-powder-metallurgy-institute.md  (+8 more)
Website/: README.md  astro.config.mjs  package-lock.json  package.json
data/: news.yaml  patents.yaml  people.yaml  profile.yaml  projects.yaml  publications.yaml  talks.yaml
mcp/: README.md  gen_hero_image.py  gen_sdl_hero.py  pyproject.toml  server.py
mcp/hero_compose/: compose_hero.html  render.py
(+13 files in other folders)
